--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,50 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+/* .App-logo {
+  
+  height: 10px;
+} */
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #000000;
+  /* height: 80px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px; */
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
+.movie .opening {
+  display: none;
+}
+
+.active .opening {
+  display: block
+}
+
+
+.carousel-item{
+  height: 150px;
+  align-content: center;
+} 
+.carousel-item img{
+  height: 150px;
+  align-content: center;
+}
+
+.carousel-inner > .item > img{
+  margin:auto;
+  }
